# python-polars-the-definitive-guide

./: .gitignore  LICENSE  README.md  appendix1.ipynb  ch01.ipynb  ch02-me.ipynb  ch02.ipynb  ch03.ipynb  ch04-me.ipynb  ch04.ipynb  ch05-me.ipynb  ch05.ipynb  ch06-me.ipynb  ch06.ipynb  ch07-me.ipynb  ch07.ipynb  ch08-me.ipynb  ch08.ipynb  ch09.ipynb  ch10.ipynb  ch11.ipynb  ch12-me.ipynb  ch12.ipynb  ch13.ipynb  ch14.ipynb  ch15.ipynb  ch16.ipynb  ch17.ipynb  ch18.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
crash-course/: crash-course.ipynb
data/: all_stocks.csv  animals.csv  asml.csv  campaigns.csv  directors.csv  fruit.csv  nvda.csv  starwars.parquet  tools.csv  top2000-2023.xlsx  transactions.csv  tsm.csv  wikimedia.ndjson
data/benchmark/: supplier.parquet
data/citibike/: nyc-neighborhoods.geojson  trips-2024-03-01.parquet  trips-2024-03-02.parquet  trips-2024-03-03.parquet  trips-2024-03-04.parquet  trips-2024-03-05.parquet  trips-2024-03-06.parquet  trips-2024-03-07.parquet  trips-2024-03-08.parquet  trips-2024-03-09.parquet  trips-2024-03-10.parquet  trips-2024-03-11.parquet  trips-2024-03-16.parquet  trips-2024-03-17.parquet  trips-2024-03-18.parquet  trips-2024-03-19.parquet  trips-2024-03-20.parquet  trips-2024-03-21.parquet  trips-2024-03-22.parquet  trips-2024-03-23.parquet  trips-2024-03-24.parquet  trips-2024-03-25.parquet  trips-2024-03-26.parquet  trips-2024-03-27.parquet  trips-2024-03-28.parquet  trips-2024-03-29.parquet  trips-2024-03-30.parquet  trips-2024-03-31.parquet
data/stock/asml/: 1999.csv  2000.csv  2001.csv  2002.csv  2003.csv  2004.csv  2005.csv  2006.csv  2007.csv  2008.csv  2009.csv  2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  2023.csv
data/stock/nvda/: 1999.csv  2000.csv  2001.csv  2002.csv  2003.csv  2004.csv  2005.csv  2006.csv  2007.csv  2008.csv  2009.csv  2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  2023.csv
data/stock/tsm/: 1999.csv  2000.csv  2001.csv  2002.csv  2003.csv  2004.csv  2005.csv  2006.csv  2007.csv  2008.csv  2009.csv  2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  2023.csv
plugins/hello_world_plugin/: Cargo.toml  test.py
plugins/hello_world_plugin/hello_world_func/: __init__.py
plugins/hello_world_plugin/src/: expressions.rs  lib.rs
plugins/polars_geo/: Cargo.toml  test.py
plugins/polars_geo/polars_geo/: __init__.py
plugins/polars_geo/src/: expressions.rs  lib.rs
