[project]
name = "python-polars-the-definitive-guide"
version = "1.0.0"
requires-python = "==3.12.*"
description = "Python Polars: The Definitive Guide"
readme = "README.md"
authors = [
    { name = "Jeroen Janssens", email = "jeroen@jeroenjanssens.com" },
    { name = "Thijs Nieuwdorp", email = "thijsnieuwdorp@hotmail.com" }
]
dependencies = [
    "altair==5.4.1",
    "bokeh==3.5.2",
    "chardet==5.2.0",
    "connectorx==0.4.0",
    "dask==2024.11.1",
    "datashader==0.17.0",
    "fastexcel==0.12.0",
    "geoviews==1.13.0",
    "great-tables==0.14.0",
    "holoviews==1.20.0",
    "hvplot==0.11.1",
    "ipython==8.29.0",
    "jupyterlab==4.3.0",
    "lxml==5.3.0",
    "matplotlib==3.9.2",
    "maturin==1.7.4",
    "numpy==2.1.3",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "patchelf==0.17.2.1 ; sys_platform == 'linux'",
    "pip==24.3.1",
    "plotly==5.24.1",
    "plotnine[all]==0.14.1",
    "polars[all]==1.20.0",
    "pyarrow==18.0.0",
    "s3fs==2024.10.0",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "textblob==0.18.0.post0",
    "vega-datasets==0.9.0",
    "vegafusion-python-embed==1.6.9",
    "vegafusion[embed]==1.6.9",
    "vl-convert-python==1.7.0",
    "xlsx2csv==0.8.3",
    "xlsxwriter==3.2.0",
]
