[project]
name = "python-polars-the-definitive-guide"
version = "1.0.0"
requires-python = "==3.12.*"
description = "Python Polars: The Definitive Guide"
readme = "README.md"
authors = [
    { name = "Jeroen Janssens", email = "jeroen@jeroenjanssens.com" },
    { name = "Thijs Nieuwdorp", email = "thijsnieuwdorp@hotmail.com" }
]
dependencies = [
    "polars[all]==1.20.0",
    "jupyterlab==4.3.5",
    "maturin==1.8.2",
    "plotnine[all]==0.14.5",
    "great-tables==0.16.1",
    "textblob==0.19.0",
    "scipy==1.15.1",
    "scikit-learn==1.6.1",
    "pyarrow==19.0.0",
    "pip==25.0",
    "chardet==5.2.0",
    "lxml==5.3.0",
    "altair==5.5.0",
    "vl-convert-python==1.7.0",
    "geoviews==1.14.0",
    "datashader==0.17.0",
    "jupyter-bokeh==4.0.5",
    "patchelf==0.17.2.1 ; sys_platform == 'linux'",
]
